<resources>
    <string name="app_name">Mi Día a Día</string>
    <string name="welcome_message">Bienvenido a Mi Día a Día</string>
    <string name="button_start">Empezar</string>

    <!-- Menú principal -->
    <string name="menu_title">Menú Principal</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_tasks">Tareas</string>
    <string name="menu_settings">Ajustes</string>

    <!-- Perfil -->
    <string name="profile_title">Mi Perfil</string>
    <string name="profile_nombreHint">Nombre</string>
    <string name="profile_emailHint">Correo electrónico</string>
    <string name="profile_reminderPrompt">Deseo recibir recordatorios</string>
    <string name="profile_notifTitle">Notificaciones</string>
    <string name="profile_notifOn">Notificaciones activadas</string>
    <string name="profile_notifOff">Notificaciones desactivadas</string>
    <string name="profile_saveButton">Guardar</string>

    <!-- Tareas -->
    <string name="tasks_title">Tareas</string>
    <string name="tasks_input_hint">Escribe una tarea</string>
    <string name="tasks_add_button">Añadir</string>
    <string name="tasks_filter_all">Todas</string>
    <string name="tasks_filter_completed">Completadas</string>
    <string name="tasks_filter_pending">Pendientes</string>
    <string name="tasks_empty_warning">Introduce una tarea antes de añadir</string>

    <!-- Ajustes -->
    <string name="settings_title">Ajustes</string>
    <string name="settings_dark_mode">Modo oscuro</string>
    <string name="settings_auto_save">Guardar cambios automáticamente</string>
    <string name="settings_reset_button">Restablecer datos</string>
    <string name="settings_reset_message">Los datos han sido reiniciados.</string>

    <!-- Toasts placeholders -->
    <string name="toast_opening_profile">Abriendo Perfil…</string>
    <string name="toast_opening_settings">Abriendo Ajustes…</string>
    <string name="toast_opening_tasks">Abriendo Tareas…</string>
</resources>