<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/switchDarkMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_dark_mode"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            app:switchPadding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsTitle"
            app:layout_constraintBottom_toTopOf="@+id/cbAutoSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/cbAutoSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_auto_save"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/switchDarkMode"
            app:layout_constraintBottom_toTopOf="@+id/btnResetData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnResetData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_reset_button"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/cbAutoSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_min="240dp"
            app:layout_constraintWidth_max="240dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
